added information to unfill spaces

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Hello, World!</h1>
-    <div>My name is _______</div>
-    <div>My favorite hobby is _______</div>
+    <div>My name is Damarrion Morgan Harper.</div>
+    <div>My favorite hobby is Gaming or Gyming.</div>
 </body>
 </html>
