--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h1>Hello, World!</h1>
     <div>My name is Damarrion Morgan Harper.</div>
     <div>My favorite hobby is Gaming or Gyming.</div>
+    <div>My favorite food is Pizza.</div>
 </body>
 </html>
